user-service/k8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-dev-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-dev-service
  template:
    metadata:
      labels:
        app: user-dev-service
    spec:
      containers:
        - name: user-dev-service
          image: user-service-dev
          imagePullPolicy: Never
          ports:
            - containerPort: 3001
          workingDir: /app   
          command: ["npm", "run", "start:dev" ]
